--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }],
     "require": {
         "php": "~7.1",
-        "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.x"
+        "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.x|6.x"
     },
     "autoload": {
         "psr-4": {
